fixed spacing between form and results

--- a/style.css
+++ b/style.css
@@ -37,6 +37,6 @@ body {
 	padding-bottom: 25px ;
 }
 
-#results h2 {
-	padding-top: 25px;
+#park-form {
+	padding-bottom: 30px;
 }
